--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Coollama Gangs is an club on Cardano Blockchain."
+      content="Coollama Gangs is an club on Solana Blockchain."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Coollama Gang | 8,888 NFTs living on Cardano Blockchain</title>
+    <title>Coollama Gang | 8,888 NFTs living on Solana Blockchain</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
