--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Coollama Gangs is an club on Solana Blockchain."
+      content="Coollama Gang is an NFT collection with a total of 8,888 unique and
+            randomly-generated llamas living on Solana. Our goal is to create a
+            true community-based story game on the Solana blockchain, with
+            deflationary and rewards mechanism."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
