Add OpenGraphics tags

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,14 @@
             true community-based story game on the Solana blockchain, with
             deflationary and rewards mechanism."
     />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://coollamagang.com" />
+    <meta
+      property="og:title"
+      content="Coollama Gang | 8,888 NFTs living on Solana Blockchain"
+    />
+    <meta property="og:image" href="https://coollamagang.com/sneakpeak.gif" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
