--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <title>Coollama Gang | 8,888 NFTs living on Solana Blockchain</title>
+    <meta
+      content="Coollama Gang | 8,888 NFTs living on Solana Blockchain"
+      property="og:title"
+    />
+    <meta
+      content="Coollama Gang | 8,888 NFTs living on Solana Blockchain"
+      property="twitter:title"
+    />
     <meta
       name="description"
       content="Coollama Gang is an NFT collection with a total of 8,888 unique and
@@ -12,30 +19,29 @@
             true community-based story game on the Solana blockchain, with
             deflationary and rewards mechanism."
     />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://coollamagang.com" />
     <meta
-      property="og:title"
-      content="Coollama Gang | 8,888 NFTs living on Solana Blockchain"
+      content="Coollama Gang is an NFT collection with a total of 8,888 unique and
+            randomly-generated llamas living on Solana. Our goal is to create a
+            true community-based story game on the Solana blockchain, with
+            deflationary and rewards mechanism."
+      property="twitter:description"
     />
-    <meta property="og:image" href="https://coollamagang.com/sneakpeak.gif" />
+    <meta
+      content="https://coollamagang.com/sneakpeak.gif"
+      property="og:image"
+    />
+    <meta
+      content="https://coollamagang.com/sneakpeak.gif"
+      property="twitter:image"
+    />
+    <meta property="og:type" content="website" />
+    <meta content="summary_large_image" name="twitter:card" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
 
+    <link rel="image_src" href="https://coollamagang.com/sneakpeak.gif" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Coollama Gang | 8,888 NFTs living on Solana Blockchain</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
